--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,16 @@
-composer.lock
+# ide
+.idea/
+.vscode/
+
+# mac
+.DS_Store
+
+# composer
+/auth.json
+/vendor/
+/composer.lock
+
 tests/searchd.log
 tests/searchd.pid
 tests/data/rt.*
 tests/data/test_udf.so
-vendor/
