--- a/composer.json
+++ b/composer.json
@@ -1,30 +1,27 @@
 {
-    "name": "foolz/sphinxql-query-builder",
-    "replace": {"foolz/sphinxql": "self.version"},
+    "name": "openregion/sphinxql-query-builder",
     "type": "library",
     "description": "A PHP query builder for SphinxQL. Uses MySQLi to connect to the Sphinx server.",
     "keywords": ["database", "sphinxql", "sphinx", "search", "SQL", "query builder"],
-    "homepage": "http://www.foolz.us",
     "license": "Apache-2.0",
-    "authors": [{"name": "foolz", "email": "support@foolz.us"}],
-    "support": {
-        "email": "support@foolz.us",
-        "irc": "irc://irc.irchighway.net/fooldriver"
-    },
+    "authors": [
+        {"name": "foolz", "email": "support@foolz.us"},
+        {"name": "CIT Open Region", "homepage": "https://www.openregion.info/"}
+    ],
     "require": {
-        "php": "^7.1 || ^8"
+        "php": "^7.4 || ^8"
     },
     "require-dev": {
         "phpunit/phpunit": "^7 || ^8 || ^9"
     },
     "autoload": {
         "psr-4": {
-            "Foolz\\SphinxQL\\": "src/"
+            "OpenRegion\\SphinxQL\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Foolz\\SphinxQL\\Tests\\": "tests/SphinxQL"
+            "OpenRegion\\SphinxQL\\Tests\\": "tests/SphinxQL"
         }
     }
 }
